@@ -3,12 +3,14 @@ package ch.so.agi.repochecker;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
 import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
@@ -28,29 +30,48 @@ public class MainController {
     @Autowired
     CheckService checkService;
     
+    @Value("${app.resultDirectory}")
+    private String resultDirectory;
+    
     @GetMapping("/ping")
     public ResponseEntity<String> ping()  {
         return new ResponseEntity<String>("interlis-repo-checker", HttpStatus.OK);
     }
-    
-    @GetMapping(value="/foo", produces=MediaType.APPLICATION_XML_VALUE)
-    public ResponseEntity<String> foo() throws IOException {
         
-
-        var xmlString = xmlMapper.writeValueAsString(checkService.getCheckedRepositories());
-        return new ResponseEntity<String>(xmlString, HttpStatus.OK);
-
-    }
-    
     @GetMapping(value = "/", produces = MediaType.TEXT_HTML_VALUE)
     @ResponseBody
     public String index() throws IOException {
-        Path filePath = Path.of("/Users/stefan/tmp/results.html");
+        Path filePath = Paths.get(resultDirectory, "result.html");
         String content = Files.readString(filePath);
         return content;
     }
+    
+//    @GetMapping("/results/{key}/{filename}") 
+//    public ResponseEntity<?> getLog(@PathVariable String key, @PathVariable String filename) {        
+//        var mediaType = new MediaType("text", "plain", StandardCharsets.UTF_8);
+//
+//        try {
+//            var logFile = Paths.get(workDirectory, key, filename).toFile();
+//            var is = new FileInputStream(logFile);
+//
+//            return ResponseEntity.ok().header("Content-Type", "charset=utf-8")
+//                    .contentLength(logFile.length())
+//                    .contentType(mediaType)
+//                    .body(new InputStreamResource(is));
+//
+//        } catch (FileNotFoundException e) {
+//            throw new IllegalStateException(e);  
+//        }
+//    }
 
+
+    // TODO
+    // get logfile
+    
+    // TODO
+    // check cron
     
     // TODO
     // cleaner
+    // result.html darf nicht gelöscht werden
 }
